src/objects/MajorAlert__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>DC311 test test test</description>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>When the major alert should stop being displayed</description>
        <label>End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>When the major alert should be displayed</description>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>DC311 Major Alerts</label>
</CustomObject>